--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # SASS
 .stylesheets/
-# main.css.map
+# main.css
 main.css.map
 
 
 .sass-cache/
-# *.css.map
+*.css.map
 *.sass.map
 *.scss.map
 
